[tool.poetry]
name = "comments.bot"
version = "0.1.0"
description = "A simple API wrapper for the comments.bot"
authors = ["Divkix <techdroidroot@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Divkix/comments.bot"
repository = "https://github.com/Divkix/comments.bot"
keywords = ["comments bot", "comments.bot", "comments.bot api"]
classifiers = [
        "Development Status :: 4 - Beta",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: Implementation :: CPython",
        "Topic :: Software Development :: Libraries",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Utilities",
    ]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"
aiodns = "^3.0.0"
aiohttp = "^3.7.4"
cchardet = "^2.1.7"
requests = "^2.25.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Divkix/comments.bot/issues"
"Community" = "https://t.me/DivideProjects"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
isort = "^5.8.0"
pre-commit = "^2.13.0"
pyclean = "^2.0.0"
pylint = "^2.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
