[tool.poetry]
name = "comments.bot"
version = "1.0.9"
description = "A simple API wrapper for the comments.bot"
authors = ["Divkix <techdroidroot@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Divkix/comments.bot"
repository = "https://github.com/Divkix/comments.bot"
keywords = ["comments bot", "comments.bot", "comments.bot api"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: Implementation :: CPython",
        "Topic :: Software Development :: Libraries",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Utilities",
    ]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
aiodns = "^3.0.0"
aiohttp = "^3.8.1"
cchardet = "^2.1.7"
requests = "^2.27.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Divkix/comments.bot/issues"
"Community" = "https://t.me/DivideProjects"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
isort = "^5.10.1"
pre-commit = "^2.17.0"
pyclean = "^2.2.0"
pylint = "^2.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
